--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,44 @@
+/*General Styling*/
+body,html{
+    height: 100%;
+    margin: 0;
+}
+.container{
+    text-align: center;
+    height: 100%;
+    padding: 16px;
+    box-sizing: border-box;
+    /* grid layout*/
+    display: grid;
+    grid-template-columns: 1fr 3fr;
+    grid-template-rows: 1fr 1fr 5fr 1fr;
+    /*place grid elements insid respective grids*/
+}
+.container div,footer{
+    padding: 15px;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    border-radius: 15px;
+}
+.header{
+    background-color: #ffde22;
+    grid-column: 1/3;
+}
+.sidebar{
+    background-color: #ff7755;
+    
+    grid-row: 2/4;
+}
+.nav{
+    background-color: #00ddff;
+}
+.article{
+    background-color: #bccbde;
+}
+.footer{
+    background-color: #393f4d;
+    grid-column: 1/3;
+}
+
 
 /*flex review*/
 .flex-container{
