--- a/css-exercise/grid/02-grid-layout-2/style.css
+++ b/css-exercise/grid/02-grid-layout-2/style.css
@@ -8,6 +8,12 @@ body, html {
   height: 100%;
   padding: 16px;
   box-sizing: border-box;
+  /* soluton -added by @seena2*/
+  display: grid;
+  grid-template-columns: 1fr 3fr;
+  grid-template-rows: 1fr 1fr 5fr 1fr;
+  gap: 15px;
+  /*end solution*/
 }
 
 .container div {
@@ -17,6 +23,7 @@ body, html {
   font-weight: bold;
   color: white;
   border-radius: 15px;
+  
 }
 
 .header {
