--- a/css-exercise/grid/03-grid-layout-3/style.css
+++ b/css-exercise/grid/03-grid-layout-3/style.css
@@ -5,6 +5,11 @@
 
 .container {
   text-align: center;
+  /*solution-@Seena*/
+  display: grid;
+  grid-template-columns: 1fr 4fr;
+  gap: 4px;
+  text-align: center;
 }
 
 .container div {
@@ -17,24 +22,35 @@
 
 .header {
   background-color: #393f4d;
+  grid-column: 1/3;
+  display: grid;
+  grid-template-columns: 1fr 3fr;
 }
 
 .logo {
+  justify-self: start;
 }
 
 .menu {
+  align-self: center;
 }
 
 .menu ul {
+  display: grid;
+ grid-template-columns: repeat(4,1fr);
 }
 
 .menu ul,
 .menu li {
   font-size: 16px;
+  list-style-type:none;
 }
 
 .sidebar {
   background-color: #FF7755;
+  grid-row: 2/4;
+  display: grid;
+  gap: 50px;
 }
 
 .sidebar .photo {
@@ -43,6 +59,8 @@
   font-size: 12px;
   font-weight: normal;
   border-radius: 10px;
+  display: grid;
+  align-items: center;
 }
 
 .photo  {
@@ -60,6 +78,10 @@
 }
 
 .nav ul {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  list-style-type: none;
+  cursor: pointer;
 }
 
 .nav ul li {
@@ -69,6 +91,10 @@
 
 .article {
   background-color: #bccbde;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px,1fr));
+  grid-template-rows: repeat(2,1fr);
+  gap: 15px;
 }
 
 .article p {
@@ -82,12 +108,14 @@
   background-color: #FFFFFF;
   color: black;
   text-align: center;
+  height: 200px;
 }
 
 .card p {
   color: black;
   font-weight: normal;
   font-size: 14px;
+  padding: 5px;
 }
 
 .card .title {
@@ -97,6 +125,7 @@
 
 .footer {
   background-color: #393f4d;
+  grid-column: 1/3;
 }
 
 .footer p {
