--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,7 @@
 /*General Styling*/
+*{
+    box-sizing: border-box;
+}
 body,html{
     height: 100%;
     margin: 0;
@@ -225,4 +228,59 @@ p{
 }
 img{
     height: 60px;
+}
+/* styling flexbox and grid usage section*/
+.layout{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 8px;
+}
+.child{
+    background: orange;
+    text-align: center;
+    padding: 25px;
+    display: flex;
+    justify-content: space-between;
+}
+.last-row{
+    grid-column: 1/3;
+}
+.child>div{
+    background: darkred;
+    height: 50px;
+    flex: 0 1 20%;
+}
+/*grid+flex examples-below flex review section styling*/
+.main-nav{
+    background: #eee;
+    
+}
+.main-nav ul{
+    margin: 0;
+    padding:0;
+    display: flex;
+    justify-content: center;
+    list-style: none;
+}
+.main-nav a{
+    padding:1.25rem 0.5rem;
+    font-size: 1.2rem;
+    max-width: 140px;
+    font-weight: bold;
+    text-decoration: none;
+    display: flex;
+    align-items: flex-start;
+    color: #333;
+   
+}
+.main-nav a:hover, .main-nav a:focus{
+    background: #ccc;
+    color: black;
+}
+.main-nav a span{
+    display: block;
+    font-size: 1rem;
+    font-weight: normal;
+    color:#888;
+    margin: 0.25rem 0 0 0;
 }
