--- a/css-exercise/01-grid-layout-1/style.css
+++ b/css-exercise/01-grid-layout-1/style.css
@@ -10,8 +10,8 @@ body, html {
   box-sizing: border-box;
   /* added by Seena2*/
    display: grid;
-    grid-template-columns: 1fr 3fr;
-    grid-template-rows: 1fr 1fr 5fr 1fr;
+    grid-template-columns: 150px 450px;
+    grid-template-rows: 100px 100px 500px 100px;
     gap: 15px;
 }
 
@@ -31,21 +31,16 @@ background-color: #FFDE22;
 
 .sidebar {
   background-color: #FF7755;
-  grid-column: 1;
-  grid-row: 2/4;
-    
+  grid-row: 2/4;  
 }
 
 .nav {
   background-color: #00DDFF;
-  grid-column: 2;
-  grid-row: 2;
+
 }
 
 .article {
   background-color: #bccbde;
-  grid-column: 2/4;
-  grid-row: 2/4;
 }
 
 .article p {
@@ -58,6 +53,5 @@ background-color: #FFDE22;
 .footer {
   background-color: #393f4d;
    color: red;
-   grid-column: 1;
-   grid-row: 4;
+   grid-column: 1/3;
 }
