--- a/css-exercise/02-grid-layout-2/style.css
+++ b/css-exercise/02-grid-layout-2/style.css
@@ -8,6 +8,11 @@ body, html {
   height: 100%;
   padding: 16px;
   box-sizing: border-box;
+  /* answer*/
+  display: grid;
+  grid-template-columns: 1fr 3fr;
+  grid-template-rows: repeat(4,1fr);
+  gap: 15px;
 }
 
 .container div {
