--- a/css-exercise/02-grid-layout-2/style.css
+++ b/css-exercise/02-grid-layout-2/style.css
@@ -8,10 +8,10 @@ body, html {
   height: 100%;
   padding: 16px;
   box-sizing: border-box;
-  /* answer*/
+  /* Solved by Senna2*/
   display: grid;
   grid-template-columns: 1fr 3fr;
-  grid-template-rows: repeat(4,1fr);
+  grid-template-rows: 1fr 1fr 5fr 1fr;
   gap: 15px;
 }
 
@@ -26,12 +26,14 @@ body, html {
 
 .header {
   background-color: #FFDE22;
+   /* Solved by Senna2*/
   grid-column: 1 / 3;
 }
 
 .sidebar {
   background-color: #FF7755;
-  grid-row: 2 / 4;
+   /* Solved by Senna2*/
+  grid-row: 2/4;
 }
 
 .nav {
@@ -40,6 +42,7 @@ body, html {
 
 .article {
   background-color: #bccbde;
+
 }
 
 .article p {
@@ -51,5 +54,6 @@ body, html {
 
 .footer {
   background-color: #393f4d;
+   /* Solved by Senna2*/
   grid-column: 1 / 3;
 }
