--- a/css-exercise/03-grid-layout-3/style.css
+++ b/css-exercise/03-grid-layout-3/style.css
@@ -5,6 +5,10 @@
 
 .container {
   text-align: center;
+  /*Seena2*/
+  display: grid;
+  grid-template-columns: 1fr 4fr;
+  gap: 4px;
 }
 
 .container div {
@@ -17,15 +21,39 @@
 
 .header {
   background-color: #393f4d;
+  /*Seena2*/
+  grid-column: 1/3;
+  display: grid;
+  grid-template-columns: 1fr 3fr;
 }
 
+/*Seena2-start*/
+.logo {
+  justify-self: start;
+}
+
+.menu {
+  align-self: center;
+}
+
+.menu ul {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+}
+
+/*Seena2-end*/
 .menu ul,
 .menu li {
   font-size: 16px;
+  list-style-type: none;
 }
 
 .sidebar {
   background-color: #FF7755;
+  /*Seena2*/
+  grid-row: 2/4;
+  display: grid;
+  gap: 50px;
 }
 
 .sidebar .photo {
@@ -34,6 +62,9 @@
   font-size: 12px;
   font-weight: normal;
   border-radius: 10px;
+  /*seena2*/
+  display: grid;
+  align-items: center;
 }
 
 
@@ -48,6 +79,14 @@
   background-color: #FF7755;
 }
 
+/*seena2*/
+.nav ul {
+  list-style-type: none;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+}
+
+
 .nav ul li {
   font-size: 16px;
   text-transform: uppercase;
@@ -55,6 +94,10 @@
 
 .article {
   background-color: #bccbde;
+  /*seena2*/
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 15px;
 }
 
 .article p {
@@ -68,12 +111,16 @@
   background-color: #FFFFFF;
   color: black;
   text-align: center;
+  /*seena2*/
+  height: 200px;
 }
 
 .card p {
   color: black;
   font-weight: normal;
   font-size: 14px;
+  /*seena2*/
+  padding: 5px;
 }
 
 .card .title {
@@ -83,9 +130,10 @@
 
 .footer {
   background-color: #393f4d;
+  grid-column: 1/3;
 }
 
 .footer p {
   font-size: 13px;
-  font-weight: normal;  
+  font-weight: normal;
 }
