--- a/css/project_dashboard.css
+++ b/css/project_dashboard.css
@@ -66,7 +66,8 @@ button a{
 }
 .title_1{
     grid-column: 1/3;
-    height: 20px;
+    height: 10px;
+    margin-bottom: -18rem;
 }
 .projects{
     display: grid;
